--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HRMS</title>
     <!--Css and Any third party Library or framework Start-->
     <link href="css/" rel="stylesheet" />
@@ -18,31 +16,31 @@
     <!--Jquery/js or any plugin End-->
 </head>
 
-<body>
+<body class="body-root">
     <!--Top Navigation Start -->
-    <nav>
+    <nav class="navbar-top">
         <a href="/" class="top-nav-brand" title="ArgilDX">
             <img src="Assets/images/brand/argil-dx.png" alt="ArgilDX_Dashboard" />
         </a>
         <ul class="top-nav-list">
             <li class="top-nav-item">
-                <a href="#" title="Switch to Manager View">
+                <a href="#" class="nav-link" title="Switch to Manager View">
                     <img src="Assets/images/switch-user/layer-14.png" alt="switch-user" />
                     Switch to Manager View
                 </a>
             </li>
-            <li>
-                <a href="#" title="Notification">
+            <li class="top-nav-item">
+                <a href="#" class="nav-link" title="Notification">
                     <img src="Assets/images/bell_2019-02-14/bell.png" alt="bell" />
                 </a>
             </li>
-            <li>
-                <a href="#" title="Settings">
+            <li class="top-nav-item">
+                <a href="#" class="nav-link" title="Settings">
                     <img src="Assets/images/settings_2019-02-14/settings.png" alt="Settings" />
                 </a>
             </li>
-            <li>
-                <a href="#" title="User">
+            <li class="top-nav-item">
+                <a href="#" class="nav-link" title="User">
                     <img src="Assets/images/user_2019-02-14/user.png" alt="User" />
                 </a>
             </li>
@@ -51,8 +49,8 @@
     <!--Top Navigation End-->
     <!----------------------->
     <!--Header Start-->
-    <header>
-        <h5>
+    <header class="header-dashboard">
+        <h5 class="heading-dashboard">
             DASHBOARD
         </h5>
 
@@ -61,7 +59,7 @@
     <!------------------------------->
     <!--Time Sheet Button Start-->
     <div class="time-sheet-btn">
-        <a href="#" title="Submit Time Sheet">
+        <a href="#" class="btn-link" title="Submit Time Sheet">
             <button class="custom-btn-timesheet ">
                 <img src="Assets/images/submit-button/layer-4.png" alt="submit_timesheet" />
                 Submit TimeSheet
@@ -77,47 +75,78 @@
             <!--Project Time Column Start-->
             <div class="project-list-col1">
                 <div class="project-clock">
-                    <img src="Assets/images/hours/group-5.png" alt="clock" />
-                    <span>
-                        <Strong>
+                    <div class="project-desc-clock">
+                        <img src="Assets/images/hours/group-5.png" class="img-clock" alt="clock" />
+                        <span class="clock-proj">
                             04
-                        </Strong>
-                        Projects
-                    </span>
+                        </span>
+                        <span class="proj">
+                            Projects
+                        </span>
+                    </div>
                 </div>
-                <div class="project-hours">
-                    <img src="Assets/images/clock/layer-5.png" alt="clock" />
-                    <span>
-                        <Strong>
-                            37
-                        </Strong>
-                        Hours
-                    </span>
+                <!--Divider Line Start-->
+                <div class="hr-line"></div>
+                <!--Divider Line End-->
+                <!--Champions Div Start-->
+                <div class="project-champions">
+                    <div class="project-desc-champions">
+                        <img src="Assets/images/clock/layer-5.png" class="img-champ" alt="champ" />
+                        <span class="hrs-proj">
+                            Champions
+                        </span>
+                        <div class="cham-progress">
+                            <span class="desc-champ">80 points to Legend</span>
+                        </div>
+                    </div>
                 </div>
+                <!--Champions Div End-->
             </div>
             <!--Project Time Column End-->
             <!---------------------------->
             <!--Project Progress Column Start-->
             <div class="project-list-col2">
                 <div class="project-head">
-                    <img src="Assets/images/hours/group-5.png" alt="clock" />
-                    <span>
-                        <strong>Projects</strong> <sub> Work on this week</sub>
+                    <img src="Assets/images/hours/group-5.png" alt="clock" class="proj-clock" />
+                    <span class="proj-heading">
+                        Projects
+                    </span>
+                    <span class="proj-prog-desc">
+                        Work on from
+                    </span>
+                    <span class="proj-duration">
+                        11 Feb to 15 Feb 2019
                     </span>
                 </div>
                 <div class="project-progress">
-                    <ul>
-                        <li>
-                            | Bright House Financial
-                        </li>
-                        <li>
-                            | C&En
-                        </li>
-                        <li>
-                            | Bajaj Finance
-                        </li>
-                    </ul>
+                    <span class="prog-bright">
+
+                    </span>
+                    <span class="prog-c-en">
+
+                    </span>
+                    <span class="prog-bajaj">
+
+                    </span>
+                    <span class="prog-internal">
+
+                    </span>
+                    <div class="proj-list">
+                        <span class="proj-bright">
+
+                        </span>
+                        <span class="proj-c-en">
+
+                        </span>
+                        <span class="proj-bajaj">
+
+                        </span>
+                        <span class="proj-internal">
+
+                        </span>
+                    </div>
                 </div>
+
             </div>
             <!--Project Progress Column Start-->
         </section>
@@ -126,131 +155,202 @@
         <!--TimeSheet Section Start-->
         <section class="container-inner">
             <div class="timesheet-row">
-                <h3>Timesheet</h3>
-                <form>
-                    <select>
-                        <option>
+                <h3 class="timesheet-head">
+                    Timesheet
+                </h3>
+                <form class="search">
+                    <select class="search-form">
+                        <option class="option-form">
                             Day View
                         </option>
                         <option>
                             Months View
                         </option>
-                        <option>
+                        <option class="option-form">
                             Year View
                         </option>
                     </select>
-                    <input type="search" name="Search" />
-                    <button>
-                        <span><img src="Assets/images/layer-13_2019-02-14/layer-13.png" alt="add" /></span>ADD TASK
-                    </button>
+                    <input type="search" name="Search" class="search-form" />
+                    <a href="#" class="add-task-btn">
+                        <img src="Assets/images/layer-13_2019-02-14/layer-13.png" class="add-task-icon" alt="add" />
+                        <span class="add-task">
+                            ADD TASK
+                        </span>
+                    </a>
                 </form>
-                <p>
+                <div class="timesheet-head">
                     Today's Timesheet(3)
-                    <time>5<sup>th</sup>Feb,2009</time>
-                </p>
+                    <div class="time-date-head">
+                        <time class="time-date">
+                            5
+                            <sup class="time-sup">
+                                th
+                            </sup>
+                            Feb,2009
+                        </time>
+                    </div>
+                </div>
             </div>
             <div class="timesheet-row">
-                <p>
+                <div class="timesheet-list">
                     | Bajaj Finance
-                </p>
-                <small>
+                </div>
+                <small class="timesheet-desc">
                     Working on Redisining the UX of Loan Platformfor Bajaj Finance
                 </small>
 
-                <p> Time Spent</p>
-                <time>
-                    04:00pm-07:00pm
-                </time>
+                <div class="time-spent-list">
+                    Time Spent
+                </div>
+                <div class="time-spent-item">
+                    <time class="time-style">
+                        04:00pm-07:00pm
+                    </time>
+                </div>
             </div>
             <div class="timesheet-row">
-                <p>
+                <div class="timesheet-list">
                     | Bright House Finance
-                </p>
-                <small>
+                </div>
+                <small class="timesheet-desc">
                     Working on Redisining the UX of Loan Platformfor Bajaj Finance
                 </small>
 
-                <p> Time Spent</p>
-                <time>
-                    04:00pm-07:00pm
-                </time>
+                <div class="time-spent-list">
+                    Time Spent
+                </div>
+                <div class="time-spent-item">
+                    <time class="time-style">
+                        04:00pm-07:00pm
+                    </time>
+                </div>
             </div>
             <div class="timesheet-row">
-                <p>
+                <div class="timesheet-list">
                     | Internal Finance
-                </p>
-                <small>
+                </div>
+                <small class="timesheet-desc">
                     Working on Redisining the UX of Loan Platformfor Bajaj Finance
                 </small>
 
-                <p> Time Spent</p>
-                <time>
-                    04:00pm-07:00pm
-                </time>
+                <div class="time-spent-list">
+                    Time Spent
+                </div>
+                <div class="time-spent-item">
+                    <time class="time-style">
+                        04:00pm-07:00pm
+                    </time>
+                </div>
             </div>
-            <p>
+            <div class="timesheet-head">
                 Yesterday's Timesheet(3)
-                <time>5<sup>th</sup>Feb,2009</time>
-            </p>
+                <time class="time-date-head">
+                    5<sup class="time-sup">
+                        th
+                    </sup>
+                    Feb,2009
+                </time>
+            </div>
             <div class="timesheet-row">
-                <p>
+                <div class="timesheet-list">
                     | Internal Finance
-                </p>
-                <small>
+                </div>
+                <small class="timesheet-desc">
                     Working on Redisining the UX of Loan Platformfor Bajaj Finance
                 </small>
 
-                <p> Time Spent</p>
-                <time>
-                    04:00pm-07:00pm
-                </time>
+                <div class="time-spent-list">
+                    Time Spent'
+                </div>
+                <div class="time-spent-item">
+                    <time class="time-style">
+                        04:00pm-07:00pm
+                    </time>
+                </div>
             </div>
         </section>
         <!--TimeSheet Section End-->
     </main>
     <!--aside Start-->
-    <aside>
-        <p>My Notification</p>
-
-        <div>
-            <input type="checkbox" id="first" />
-            <label for="first">Submit Time Sheet</label>
-            <p>To:Ankur Mittal</p>
-            <mark>Due Today</mark>
+    <aside class="notification-aside">
+        <div class="my-notify">
+            My Notification
         </div>
-        <div>
-                <input type="checkbox" id="second" />
-                <label for="second">Approve time Sheet</label>
-                <p>Emp Name:Rohan Vora</p>
-                <mark>Due in 2 Days</mark>
+        <div class="my-notify-row">
+            <input type="checkbox" id="first" class="checkbox-notification" />
+            <label for="first">
+                Submit Time Sheet
+            </label>
+            <div class="to-name">
+                To:Ankur Mittal
             </div>
-
-        <div>
-            <input type="checkbox" id="third" />
-            <label for="third">Approve time Sheet</label>
-            <p> Emp Name:Ammar Naseem</p>
-            <mark>Due in 2 Days</mark>
+            <mark class="mark-time">
+                Due Today
+            </mark>
         </div>
-        <div>
-                <input type="checkbox" id="fourth" />
-                <label for="fourth">Approve time Sheet</label>
-                <p>Emp Name:Ammar Naseem</p>
-                <mark>Due in 2 Days</mark>
+        <div class="my-notify-row">
+            <input type="checkbox" id="second" class="checkbox-notification" />
+            <label for="second">
+                Approve time Sheet
+            </label>
+            <div class="to-name">
+                Emp Name:Rohan Vora
             </div>
-            <div>
-                    <input type="checkbox" id="fifth" checked/>
-                    <label for="fifth"><strike>Approve time Sheet</strike></label>
-                    <p><strike>Emp Name:Pranjal</strike></p>
-                    <mark>Done</mark>
-                </div>
+            <mark class="mark">
+                Due in 2 Days
+            </mark>
+        </div>
 
-                <div class="message">
-                    <strong>Congratulation</strong>
-                    <p>You have completed 9 Task last week</p>
-                </div>
+        <div class="my-notify-row">
+            <input type="checkbox" id="third" class="checkbox-notification" />
+            <label for="third">
+                Approve time Sheet
+            </label>
+            <div class="to-name">
+                Emp Name:Ammar Naseem
+            </div>
+            <mark class="mark">
+                Due in 2 Days
+            </mark>
+        </div>
+        <div class="my-notify-row">
+            <input type="checkbox" id="fourth" class="checkbox-notification" />
+            <label for="fourth">
+                Approve time Sheet
+            </label>
+            <div class="to-name">
+                Emp Name:Ammar Naseem
+            </div>
+            <mark class="mark">
+                Due in 2 Days
+            </mark>
+        </div>
+        <div class="my-notify-row">
+            <input type="checkbox" id="fifth" class="checkbox-notification" checked />
+            <label for="fifth">
+                Approve time Sheet
+            </label>
+            <div class="to-name">
+                Emp Name:Pranjal
+            </div>
+            <mark class="mark">
+                Done
+            </mark>
+        </div>
 
+        <div class="message">
+            <div class="message-head">
+                Congratulation
+            </div>
+            <div class="message-desc">
+                <img class="message-left" src="" alt="msg-right" />
+                You have completed 9 Task last week
+                <img src="" class="message-right" alt="msg-right" />
+            </div>
+        </div>
     </aside>
     <!--Aside End-->
+    <script src="js/"></script>
 </body>
 
 </html>
