--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                 Congratulation
             </div>
             <div class="message-desc">
-                <img class="message-left" src="" alt="msg-right" />
+                <img class="message-left" src="" alt="msg-left" />
                 You have completed 9 Task last week
                 <img src="" class="message-right" alt="msg-right" />
             </div>
