Styling Add and Assets

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>HRMS</title>
     <!--Css and Any third party Library or framework Start-->
-    <link href="css/" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
     <link href="css/" rel="stylesheet" />
     <!--Css and Any third party Library End-->
     <!----------------------------------------->
@@ -51,9 +51,9 @@
     <!----------------------->
     <!--Header Start-->
     <header class="header-dashboard">
-        <h5 class="heading-dashboard">
+        <h1 class="heading-dashboard">
             DASHBOARD
-        </h5>
+        </h1>
 
     </header>
     <!--Header End-->
@@ -98,7 +98,7 @@
                                 Champions
                             </span>
                             <div class="cham-progress">
-                                <span class="desc-champ">80 points to Legend</span>
+                                <span class="desc-champ"></span><span>80 points to Legend</span>
                             </div>
                         </div>
                     </div>
@@ -111,9 +111,7 @@
                     <div class="project-head">
                         <img src="Assets/images/hours/group-5.png" alt="clock" class="proj-clock" />
                         <span class="proj-heading">
-                            Projects
-                        </span>
-                        <span class="proj-prog-desc">
+                            Projects</span><span class="proj-prog-desc">
                             Work on from
                         </span>
                         <span class="proj-duration">
@@ -135,16 +133,17 @@
                         </span>
                         <div class="proj-list">
                             <span class="proj-bright">
-
+                                | Bright House
                             </span>
                             <span class="proj-c-en">
+                                | C&EN
 
                             </span>
                             <span class="proj-bajaj">
-
+                                | Bajaj
                             </span>
                             <span class="proj-internal">
-
+                                | Internal
                             </span>
                         </div>
                     </div>
@@ -161,7 +160,9 @@
                 <h3 class="timesheet-head">
                     Timesheet
                 </h3>
+                <img src="Assets/images/search/layer-11_2019-02-19/layer-11.png" class="search-img" alt="search" />
                 <form class="search">
+                    <img src="Assets/images/drop/layer-4_2019-02-19/layer-4.png" class="calender" alt="cal" />
                     <select class="search-form">
                         <option class="option-form">
                             Day View
@@ -173,7 +174,6 @@
                             Year View
                         </option>
                     </select>
-                    <input type="search" name="Search" class="search-form" />
                     <a href="#" class="add-task-btn">
                         <img src="Assets/images/layer-13_2019-02-14/layer-13.png" class="add-task-icon" alt="add" />
                         <span class="add-task">
@@ -199,16 +199,22 @@
                     | Bajaj Finance
                 </div>
                 <small class="timesheet-desc">
+                    <img src="Assets/images/chat/desc_2019-02-19/desc.png" class="img-chat" alt="chat" />
                     Working on Redisining the UX of Loan Platformfor Bajaj Finance
                 </small>
 
                 <div class="time-spent-list">
+                    <img src="Assets/images/time-spent/layer-12_2019-02-19/layer-12.png" class="time-spent" alt="time" />
                     Time Spent
                 </div>
                 <div class="time-spent-item">
                     <time class="time-style">
                         04:00pm-07:00pm
                     </time>
+                </div>
+                <div class="edit-icon">
+                    <img src="Assets/images/pencil/edit_2019-02-19/edit.png" alt="edit" class="edit-img" />
+                    <img src="Assets/images/circle/circle_2019-02-19/circle.png" alt="dots" class="dots-img" />
                 </div>
             </article>
             <article class="timesheet-row">
@@ -216,10 +222,12 @@
                     | Bright House Finance
                 </div>
                 <small class="timesheet-desc">
+                        <img src="Assets/images/chat/desc_2019-02-19/desc.png" class="img-chat" alt="chat" />
                     Working on Redisining the UX of Loan Platformfor Bajaj Finance
                 </small>
 
                 <div class="time-spent-list">
+                        <img src="Assets/images/time-spent/layer-12_2019-02-19/layer-12.png" class="time-spent" alt="time" />
                     Time Spent
                 </div>
                 <div class="time-spent-item">
@@ -227,16 +235,22 @@
                         04:00pm-07:00pm
                     </time>
                 </div>
+                <div class="edit-icon">
+                        <img src="Assets/images/pencil/edit_2019-02-19/edit.png" alt="edit" class="edit-img" />
+                        <img src="Assets/images/circle/circle_2019-02-19/circle.png" alt="dots" class="dots-img" />
+                    </div>
             </article>
             <article class="timesheet-row">
                 <div class="timesheet-list">
                     | Internal Finance
                 </div>
                 <small class="timesheet-desc">
+                        <img src="Assets/images/chat/desc_2019-02-19/desc.png" class="img-chat" alt="chat" />
                     Working on Redisining the UX of Loan Platformfor Bajaj Finance
                 </small>
 
                 <div class="time-spent-list">
+                        <img src="Assets/images/time-spent/layer-12_2019-02-19/layer-12.png" class="time-spent" alt="time" />
                     Time Spent
                 </div>
                 <div class="time-spent-item">
@@ -244,6 +258,10 @@
                         04:00pm-07:00pm
                     </time>
                 </div>
+                <div class="edit-icon">
+                        <img src="Assets/images/pencil/edit_2019-02-19/edit.png" alt="edit" class="edit-img" />
+                        <img src="Assets/images/circle/circle_2019-02-19/circle.png" alt="dots" class="dots-img" />
+                    </div>
             </article>
             <div class="timesheet-head">
                 Yesterday's Timesheet(3)
@@ -259,10 +277,12 @@
                     | Internal Finance
                 </div>
                 <small class="timesheet-desc">
+                        <img src="Assets/images/chat/desc_2019-02-19/desc.png" class="img-chat" alt="chat" />
                     Working on Redisining the UX of Loan Platformfor Bajaj Finance
                 </small>
 
                 <div class="time-spent-list">
+                        <img src="Assets/images/time-spent/layer-12_2019-02-19/layer-12.png" class="time-spent" alt="time" />
                     Time Spent'
                 </div>
                 <div class="time-spent-item">
@@ -270,6 +290,10 @@
                         04:00pm-07:00pm
                     </time>
                 </div>
+                <div class="edit-icon">
+                        <img src="Assets/images/pencil/edit_2019-02-19/edit.png" alt="edit" class="edit-img" />
+                        <img src="Assets/images/circle/circle_2019-02-19/circle.png" alt="dots" class="dots-img" />
+                    </div>
             </article>
         </section>
         <!--TimeSheet Section End-->
@@ -334,10 +358,10 @@
                 <label for="fifth">
                     Approve time Sheet
                 </label>
-                <div class="to-name">
+                <div class="to-name-done">
                     Emp Name:Pranjal
                 </div>
-                <mark class="mark">
+                <mark class="mark-done">
                     Done
                 </mark>
             </div>
@@ -347,9 +371,9 @@
                     Congratulation
                 </div>
                 <div class="message-desc">
-                    <img class="message-left" src="" alt="msg-left" />
+                    <img class="message-left" src="Assets/images/whooper/layer-9_2019-02-19/layer-9.png" alt="msg-left" />
                     You have completed 9 Task last week
-                    <img src="" class="message-right" alt="msg-right" />
+                    <img src="Assets/images/whooper/layer-10_2019-02-19/layer-10.png" class="message-right" alt="msg-right" />
                 </div>
             </div>
         </article>
